# ventor

./: README.md
odoo-bringout-ventor-custom_import_wizard/: README.md  pyproject.toml
odoo-bringout-ventor-custom_import_wizard/custom_import_wizard/i18n/: bs.po
odoo-bringout-ventor-custom_import_wizard/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-ventor-outgoing_routing/: README.md  pyproject.toml
odoo-bringout-ventor-outgoing_routing/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  TROUBLESHOOTING.md  USAGE.md
odoo-bringout-ventor-outgoing_routing/outgoing_routing/i18n/: bs.po
odoo-bringout-ventor-product_multiple_barcodes/: README.md  pyproject.toml
odoo-bringout-ventor-product_multiple_barcodes/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-ventor-product_multiple_barcodes/product_multiple_barcodes/: README.rst  __manifest__.py
odoo-bringout-ventor-product_multiple_barcodes/product_multiple_barcodes/doc/: index.rst
odoo-bringout-ventor-product_multiple_barcodes/product_multiple_barcodes/i18n/: bs.po
odoo-bringout-ventor-product_multiple_barcodes/product_multiple_barcodes/models/: product_product.py  product_template.py
odoo-bringout-ventor-ventor_base/: README.md  pyproject.toml
odoo-bringout-ventor-ventor_base/doc/: ARCHITECTURE.md  CONFIGURATION.md  CONTROLLERS.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-ventor-ventor_base/ventor_base/: README.rst  __init__.py  __manifest__.py
odoo-bringout-ventor-ventor_base/ventor_base/data/: ventor_option_setting.xml
odoo-bringout-ventor-ventor_base/ventor_base/doc/: index.rst
odoo-bringout-ventor-ventor_base/ventor_base/i18n/: bs.po
odoo-bringout-ventor-ventor_base/ventor_base/models/: res_config.py  res_users.py  stock_picking.py  stock_quant.py  stock_warehouse.py
odoo-bringout-ventor-ventor_base/ventor_base/report/: report_stockpicking_operations.xml
odoo-bringout-ventor-ventor_base/ventor_base/security/: groups.xml
odoo-bringout-ventor-ventor_base/ventor_base/views/: pallet_transfer.xml  stock_location.xml  stock_picking.xml  stock_quant.xml  ventor_option_setting.xml
odoo-bringout-ventor-ventor_base/ventor_base/wizard/: allowed_operation_type_wizard_views.xml
