[project]
name = "odoo-bringout-ventor-outgoing_routing"
version = "16.0.0"
description = "Picking and Reservation Strategy - Allows to automatically build optimal picking routes and apply custom reservation options"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-ventor-sale_management>=16.0.0",
    "odoo-bringout-ventor-stock_picking_batch>=16.0.0",
    "odoo-bringout-ventor-ventor_base>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["outgoing_routing"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
