[project]
name = "odoo-bringout-ventor-product_multiple_barcodes"
version = "16.0.0"
description = "Product Multiple Barcodes - Allows to define multiple additional barcodes for products and to search products by additional barcodes and internal reference."
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-ocb-product>=16.0.0",
    "odoo-bringout-oca-ocb-sale>=16.0.0",
    "odoo-bringout-oca-ocb-purchase>=16.0.0",
    "odoo-bringout-oca-ocb-stock>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["product_multiple_barcodes"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
